apps/kowl/40.Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kowl
  namespace: kowl
  labels:
    app.kubernetes.io/component: kowl
    app.kubernetes.io/name: kowl
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kowl
      app.kubernetes.io/name: kowl
  template:
    metadata:
      labels:
        app.kubernetes.io/component: kowl
        app.kubernetes.io/name: kowl
    spec:
      volumes:
        - name: kowl-config
          configMap:
            name: kowl-config
            items:
            - key: kowl.yml
              path: kowl.yml
        - name: kowl-storage
          emptyDir: {}
      containers:
        - name: kowl
          image: registry.ubuntu.home/docker.io/shopstic/kowl:v1.5.0
          args:
            - '-config.filepath=/etc/kowl/kowl.yml'
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: kowl-config
              mountPath: /etc/kowl/kowl.yml
              subPath: kowl.yml
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: kowl
      serviceAccount: kowl
      securityContext:
        runAsUser: 65534
        runAsNonRoot: true
        fsGroup: 65534
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
