apps/kowl/50.Service.yml
apiVersion: v1
kind: Service
metadata:
  name: kowl
  namespace: kowl
  labels:
    app.kubernetes.io/component: kowl
    app.kubernetes.io/name: kowl
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort:   selector:
    app.kubernetes.io/component: kowl
    app.kubernetes.io/name: kowl
http
  sessionAffinity: None
  type: ClusterIP
